refactored Resource added ftp, sftp implementations

--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -16,10 +16,11 @@ download-manager {
         port = 21
       }
 
-      my-site.com {
-        username = "usr"
-        pwd = "pwd"
+      test.rebex.net {
+        username = "demo"
+        pwd = "password"
       }
+
     }
 
     sftp {
@@ -27,6 +28,11 @@ download-manager {
         username = "default"
         pwd = "default"
         port = 22
+      }
+
+      test.rebex.net {
+        username = "demo"
+        pwd = "password"
       }
 
     }
